Start laying infrastructure for Twitter api

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,8 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+twitter {
+  key = "TOeX4HsVOYibo3b2QlU5lixzd"
+  secret = "nSqZTenwsqKrTLTWtJzUmNMJMVvDWSt6ZLOm06mZk779SWbKey"
+}
