Configure Mongo, small changes to TwitterAPI and models

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -352,6 +352,10 @@ db {
   #default.logSql=true
 }
 
+mongodb {
+  uri = "mongodb://[username:password@]host1[:port1][,host2[:port2],...[,hostN[:portN]]][/[database][?options]]"
+}
+
 twitter {
   key = "TOeX4HsVOYibo3b2QlU5lixzd"
   secret = "nSqZTenwsqKrTLTWtJzUmNMJMVvDWSt6ZLOm06mZk779SWbKey"
