Begin testing the connection, writing is working properly

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,6 +58,7 @@ play.modules {
   # explicitly below.
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
+  enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
@@ -353,7 +354,7 @@ db {
 }
 
 mongodb {
-  uri = "mongodb://[username:password@]host1[:port1][,host2[:port2],...[,hostN[:portN]]][/[database][?options]]"
+  uri = "mongodb://localhost:27017/testdb"
 }
 
 twitter {
